syntax = "proto3";

package pb.facedata;

message FaceData{
    string filename = 1;
    repeated Landmarks packedlM = 2; //array of landmark data, packaged to reduce sampling rate
    repeated FaceOval packedFO = 3; // Additional face oval landmarks
}

message Landmarks{
    string name = 1;
    int32 x = 2;
    int32 y = 3;
}


message FaceOval{
    string name = 1;
    int32 x = 2;
    int32 y = 3;
}



